13-security-tenancy/deploy/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: lvl13
  labels:
    kubernetes.io/metadata.name: lvl13
